[gd_scene load_steps=5 format=3 uid="uid://bebmap5opiy7l"]

[ext_resource type="PackedScene" uid="uid://dve2x8ggntrwi" path="res://ui/radialCalendar/RadialCalendar.tscn" id="1_18po4"]
[ext_resource type="Script" path="res://ui/main.gd" id="1_jydcc"]
[ext_resource type="PackedScene" uid="uid://3prplegus4v2" path="res://ui/frequencyTable/FrequencyTable.tscn" id="2_etiki"]
[ext_resource type="PackedScene" uid="uid://bdwtulqoxar70" path="res://ui/probabilityDisplay/probability_display.tscn" id="3_38vb4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jydcc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Data" type="PopupMenu" parent="PanelContainer/MenuBar"]

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="MonthInput" type="OptionButton" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DayInput" type="SpinBox" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
rounded = true

[node name="AddNewDayButton" type="Button" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Day"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FrequencyTable" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource("2_etiki")]
layout_mode = 2

[node name="ProbabilityDisplay" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_38vb4")]
layout_mode = 2

[node name="FancyDateDisplay" parent="PanelContainer/HSplitContainer" instance=ExtResource("1_18po4")]
layout_mode = 2
